# curatedMetagenomicsNextflow

./: .gcloudignore  .gitignore  .nf-core.yml  .prettierignore  CHANGELOG.md  CITATIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  REFACTORING_SUMMARY.md  convert_srrs_to_uuid.py  example.swarm  get_nextflow.sh  google.md  justfile  main.nf  main.nf.backup  nextflow.config  nextflow_schema.json  nf-test.config  runthrough.sh  samplesheet.test.tsv  samplesheet.tsv  submit.sh  submit_alpine.sh  submit_anvil.sh  submit_biowulf.sh  submit_bridges.sh  submit_unitn.sh  unitn_setup.md
.github/workflows/: ci.yml  linting.yml
conf/: base.config  modules.config  test.config
conf/profiles/: alpine.config  anvil.config  dev.config  gcs.config  google.config  local.config  rollback.config  unitn.config
conf/test/: disable-telemetry.config
docker/: Dockerfile  cloudbuild.yaml  docker_build.sh  usersettings
docs/: verify-before-full-run.md
docs/adr/: 0000-record-architecture-decisions.md  0001-container-strategy.md  0002-defer-humann.md  0003-dual-branch-rarefied-profiling.md  0004-gtdb-conversion-vendored-mapping.md  0005-per-sample-manifest.md  0006-kraken2-bracken-complementary-profiler.md  0007-resistome-rgi-card.md  0008-per-sample-qc-reporting.md  0009-retry-and-failure-handling-policy.md  0010-error-strategy-finish.md  0011-gcs-storage-profile-split.md  README.md  (+6 more)
serv/: Dockerfile  build_and_push.sh  main.py  pyproject.toml
tests/: main.functions.nf.test  main.nf.test  nextflow.config
worker/: testing.nf  worker.py
workflows/: curatedmetagenomicsnextflow.nf
(+29 files in other folders)
