[tool.poetry]
name = "serv"
version = "0.1.0"
description = ""
authors = ["Sean Davis <seandavi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
uvicorn = "^0.11.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
